--- a/app/src/main/res/drawable/filter_icon_selector.xml
+++ b/app/src/main/res/drawable/filter_icon_selector.xml
@@ -2,10 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:drawable="@drawable/icon_filter_on"
-        android:state_enabled="true"
-        android:state_selected="true"/>
+        android:state_pressed="true"/>
 
     <item
         android:drawable="@drawable/icon_filter_off"
-        android:state_enabled="false"/>
+        android:state_pressed="false"/>
 </selector>
