--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,220 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context=".fragment.DetailFragment"
-    android:background="#B0000000"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".fragment.DetailFragment"
+    android:background="#E6000000" >
 
-    <ImageView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_fullview_f_l"
-        android:layout_marginTop="40dp"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_fullview_f_r"
-        android:layout_marginTop="40dp"
-        android:layout_alignParentRight="true"/>
-    <RelativeLayout
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="7dp"
-        android:background="@drawable/bg_fullview_main_w"
-        >
-        <ImageView
-            android:id="@+id/full_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:layout_centerHorizontal="true"/>
-        <ImageView
-            android:id="@+id/full_photo_st_b"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/full_photo_st_b"
-            android:layout_marginTop="18dp"
-            android:layout_centerHorizontal="true"/>
-        <ImageView
-            android:id="@+id/full_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/full_photo_st_b"
-            android:layout_alignRight="@id/full_photo_st_b"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/icon_rice_st_b"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bg_fullview_main_b"/>
-        <RelativeLayout
-            android:id="@+id/full_text_area"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/full_photo_st_b"
-            android:layout_marginTop="20dp"
-            android:gravity="center">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#929292"
-                    android:text="우리는 "/>
-                <TextView
-                    android:id="@+id/full_text_age"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#e70033"
-                    android:text="21~25"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#929292"
-                    android:text="살 "/>
-                <TextView
-                    android:id="@+id/full_text_user_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#e70033"
-                    android:text="2"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="#929292"
-                    android:text="명이에요"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true">
-                <TextView
-                    android:id="@+id/full_text_category"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:lineSpacingExtra="9sp"
-                    android:textColor="#e70033"
-                    android:text="\n술"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:lineSpacingExtra="9sp"
-                    android:textColor="#929292"
-                    android:text="\n 쏜다!!"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true">
-                <TextView
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:lineSpacingExtra="9sp"
-                    android:textColor="#929292"
-                    android:text="\n\n나와의 거리 "/>
-                <TextView
-                    android:id="@+id/full_text_distance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:lineSpacingExtra="9sp"
-                    android:textColor="#e70033"
-                    android:text="\n\n1km"/>
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/full_heart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_ssom_heart"
-            android:layout_below="@id/full_text_area"
-            android:layout_marginTop="25dp"
-            android:layout_centerHorizontal="true"
-            />
-        <TextView
-            android:id="@+id/full_detail_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/full_heart"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:textColor="#C0C0C0"
-            android:text="He say - 방금전"/>
-        <TextView
-            android:id="@+id/detail_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:layout_below="@id/full_detail_time"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:lineSpacingExtra="8sp"
-            android:textColor="#000000"
-            android:text="There are no content"/>
-        <RelativeLayout
-            android:id="@+id/btn_ssom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/btn_ssom_wide_r"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="10dp"
-            >
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
-                <ImageView
-                    android:id="@+id/icon_heart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_heart"
-                    android:layout_centerVertical="true"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="27sp"
-                    android:textColor="#ffffff"
-                    android:layout_toRightOf="@+id/icon_heart"
-                    android:layout_marginLeft="15dp"
-                    android:text="쏨 타기"/>
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-
-        <ImageView
-            android:id="@+id/close_detail_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_write_cancle"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="7dp"
-            android:layout_marginBottom="5dp"/>
-    </RelativeLayout>
-
+        android:layout_height="wrap_content" />
 </RelativeLayout>
