--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -7,8 +7,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="19dp"
+        android:layout_marginLeft="21dp"
         android:background="@drawable/bg_filter"
         android:orientation="vertical">
 
@@ -193,5 +193,13 @@
                 android:text="@string/filter_btn_apply"/>
         </LinearLayout>
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="61dp"
+        android:layout_height="61dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="19dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/icon_filter_on"/>
 
 </RelativeLayout>
